# claude-code

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  config.py  exchange.py  indicators.py  main.py  pyproject.toml  railway.toml  requirements.txt  velocity_bot.py
camflow/: .gitignore  README.md  ROADMAP.md  make_app.sh  make_icon.py  requirements.txt  run.sh  update.sh
camflow/camflow/: __init__.py  __main__.py  app.py  cleanup.py  config.py  dashboard.py  doctor.py  overlay.py  recorder.py  singleton.py  stats.py  transcriber.py  typer.py
camflow/docs/: index.html
config/: live.yaml
dashboard/: .env.example  README.md  app.py  bots.yaml  health.py  notify.py  requirements.txt  store.py
dashboard/static/: index.html
day-trader-bot/: .env.example  .gitignore  README.md  backtest.py  backtest_velocity.py  bot.py  config.py  exchange.py  handoff.md  indicators.py  risk.py  strategy.py  test_strategy.py  test_velocity.py  velocity_bot.py
day-trader-bot/scouting/: REPORT.md  analyze_losses.py  fit_signal.py  hilbert_f36_trades.csv  improve.py  verify_hilbert.py
scripts/: backtest.py  dry_run.py  force_trade.py  strategy_scan.py  trade_log.py
src/bot/: __init__.py  db.py  exchange.py  runner.py  strategy.py  telegram.py
tests/: test_fixes.py
whisperflow/: README.md  run.sh
whisperflow/whisperflow/: __init__.py  app.py  config.py  recorder.py  transcriber.py
