[project]
name = "bot8-avax-spectral"
version = "0.1.0"
description = "Bot 8 — AVAX V-H Spectral strategy, Bybit live"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.5.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
